--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3'
 services:
   hub:
     build: ./docker
-    image: home-hub:latest
+    image: hub:latest
     ports: 
       - "80:80"
     volumes:
@@ -13,4 +13,11 @@ services:
       - ./nginx/sites-enabled:/etc/nginx/sites-enabled
       - ./nginx/other-protocols:/etc/nginx/other-protocols
       - ./home_hub:/opt/app
-
+      - /dev/snd/pcmC0D0p:/dev/snd/pcmC0D0p
+      - /dev/snd/pcmC1D0c:/dev/snd/pcmC1D0c
+      - /dev/snd/controlC0:/dev/snd/controlC0
+      - /dev/snd/controlC1:/dev/snd/controlC1
+      - /opt/vc/lib:/opt/vc/lib
+    devices:
+      - "/dev/vchiq:/dev/vchiq"
+    privileged: true
